Backend: Added FileType catalog
